# packaging_sample

./: LICENSE  README.md  pyproject.toml  setup.py  test2.py
main/: __init__.py
my-sample-package/: setup.py
sample_package_KianML/: __init__.py
src/sample_package_KianML/: __init__.py
src/sample_package_KianML_1.0/: __init__.py
tests/: test_init.py
