[project]
name = "sample_package_KianML"
version = "1.1"
authors = [
  { name="Kianoosh Keshavarzian", email="kshvzn@gmail.com" },
]
description = "This is a packaging example"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "RMIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/KianML/packaging_sample"
Issues = "https://github.com/pypa/sampleproject/issues"
